# GuardME_cpp

./: .gitignore  CMakeLists_Console.txt  README.md  guardme.desktop
guardme_cpp/: CMakeLists.txt  Makefile  README.md  instructions.txt  setup.sh
guardme_cpp/include/core/: configmanager.h  logger.h
guardme_cpp/include/gui/: alertstab.h  apistatustab.h  dashboardtab.h  mainwindow.h  toolstab.h
guardme_cpp/include/network/: imapclient.h
guardme_cpp/include/security/: downloadmonitor.h  sslanalyzer.h  whoisanalyzer.h
guardme_cpp/resources/: guardi_responses.json  resources.qrc
guardme_cpp/src/: instructions.txt
guardme_cpp/src/core/: logger.cpp
guardme_cpp/src/gui/: apistatustab.cpp  dashboardtab.cpp  emailprotectiontab.cpp  mainwindow.cpp  toolstab.cpp
guardme_cpp/src/ml/: threatdetector.cpp
guardme_cpp/src/network/: breachcheck.cpp  httpclient.cpp  imapclient.cpp
guardme_cpp/src/security/: credentialvault.cpp  downloadmonitor.cpp  urlanalyzer.cpp  virusscanner.cpp  whoisanalyzer.cpp
guardme_cpp/src/utils/: systemmonitor.cpp
include/gui/: chatbotwidget.h  controlstab.h  emailprotectiontab.h
include/ml/: threatdetector.h
include/network/: breachcheck.h  httpclient.h
include/security/: credentialvault.h  urlanalyzer.h  virusscanner.h
include/utils/: systemmonitor.h
src/: console_main.cpp  main.cpp
src/core/: configmanager.cpp
src/gui/: alertstab.cpp  chatbotwidget.cpp  controlstab.cpp
src/security/: sslanalyzer.cpp
